Version 2.12 ->
---------------
 - fixed bug with name collision between method and static field of same name
 - added --maxheap, --egg-info and --extra-setup-arg parameters (Chris Wilson)
 - added check for duplicate class names in generated Python module
 - updated setuptools patch logic to accomodate new 0.6.15 and up fork
 - fixed issues with with arrays as generics parameters (openjdk 7)
 - 

Version 2.11 -> 2.12
--------------------
 - fixed slice operation bug on JArray (int vs Py_ssize_t on 64-bit systems)
 - fixed bug in argument parsing not detecting soon enough incorrect num args
 - fixed bug in JArray(type) function decref'ing type_name too soon

Version 2.10 -> 2.11
--------------------
 - improved recovery from toString() failure, displaying class name instead
 - non public classes listed on command line now wrapped (Lukasz Jancewicz)
 - fixed bug with generating wrappers for unimplemented interface methods
 - fixed bug with generating propMethods for void getters
 - fixed bug with missing code for returning arrays from iterators

Version 2.9 -> 2.10
-------------------
 - added javadoc for org.apache.jcc.PythonVM class (Bill Janssen)
 - fixed bug with Constructor.getGenericParameterTypes() losing first parameter

Version 2.8 -> 2.9
------------------
 - fixed bug with excluding inner classes only (Christian Heimes)
 - fixed bug with Python gc in non-attached JVM thread (Christian Heimes)

Version 2.7 -> 2.8
------------------
 - fixed bug with --module using relative paths (Roman Chyla)
 - made fully qualified C++ class names absolute
 - fixed bug with parameterized types not requiring classes found in parameters
 - fixed bug with missing space between >> of nested generics

Version 2.6 -> 2.7
------------------
 - added 'IGNORE' to reserved word list
 - improved --exclude logic to also exclude inner classes of excluded classes
 - moved --find-jvm-dll logic to __init__.py to accomodate Python 2.7